--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
-Theme Name: Yendev_theme
-Theme URI: Your theme's URL
-Description: Theme tải nhạc chuông cho điện thoại
+Theme Name: Them_Freeringtonesmobile
+Theme URI: Freeringtonesmobile.net
+Description: Dowload ringtones for mobile free
 Version: 1.0
 Author: Yendev96
 Author URI: fb.com/yendev96
@@ -66,7 +66,7 @@ button.btn-success{
 
 .container-same-item .btn_dowload{
 	position: absolute;
-	bottom: 6px;
+	bottom: 10px;
 	right: 0px;
 }
 
