--- a/style.css
+++ b/style.css
@@ -58,8 +58,13 @@ h1, h2, h3, h4, h5, h6{
 	z-index: 12;
 }
 
+.logo{
+	width: 20%;
+}
+
 .category{
-	margin-left: 30px;
+	padding-left: 80px;
+	width: 80%;
 }
 
 .list-menu{
@@ -117,7 +122,7 @@ h1, h2, h3, h4, h5, h6{
 
 
 .mynav{
-	padding: 20px;
+	padding: 5px;
 	background: #000000c9;
 }
 
@@ -565,8 +570,6 @@ footer p{
 	}
 
 
-	
-
 
 	.icon-title{
 		margin:0;
@@ -580,15 +583,31 @@ footer p{
 		margin-bottom: 10px;
 	}
 
+	.container-single{
+		background: #fff;  
+		border-radius: 10px 10px 0 0;
+	}
+
 	.left-category{
-		width: 80%;
 		float: left;
 		padding-right: 50px;
 
 	}
 
 	.right-category{
-		width: 20%;
+		float: left;
+	}
+
+
+	.left-single{
+		padding: 0 20px;
+		width: 70%;
+		float: left;
+	}
+
+	.right-single{
+		padding-right: 20px;
+		width: 30%;
 		float: left;
 	}
 	@media only screen and (min-width: 0px) {
@@ -597,6 +616,16 @@ footer p{
 		}
 		.container-item-category{
 			width: 100%;
+		}
+
+		.left-category{
+			width: 100%;
+			padding-right: 0;
+		}
+
+		.right-category{
+			width: 100%;
+
 		}
 		
 	}
@@ -613,21 +642,33 @@ footer p{
 		
 	}
 
-	
+	@media only screen and (max-width: 1000px) {
 
-
-
-	@media only screen and (max-width: 940px) {
-		.left-category{
+		.left-single{
+			padding: 0 20px;
 			width: 100%;
+			float: left;
 		}
 
-		.right-category{
+		.right-single{
+			padding-right: 20px;
 			width: 100%;
+			float: left;
+			padding-left: 20px;
 		}
 		
+	}
+
+
+
+
+	@media only screen and (max-width: 800px) {
+		
+		
 		.logo{
+			text-align: left !important;
 			width: 100%;
+
 		}
 
 		.button-show-hide{
@@ -677,16 +718,21 @@ footer p{
 	}
 
 
-	@media only screen and (min-width: 943px) {
-		.left-category{
-			width: 65%;
+
+	@media only screen and (max-width: 1100px) {
+		.logo{
+			width: 100%;
+			text-align: center;
+		}
+
+		.category{
+			padding-left: 0;
+			width: 100%;
+			text-align: center;
 		}
 
 
-		.right-category{
-			width: 35%;
-		}
-		
+
 	}
 
 
@@ -703,6 +749,7 @@ footer p{
 
 		.left-category{
 			width: 65%;
+			padding-right: 50px;
 		}
 
 		.right-category{
