--- a/style.css
+++ b/style.css
@@ -39,18 +39,6 @@ h1, h2, h3, h4, h5, h6{
 	text-transform: none;
 }
 
-.jp-title{
-	padding: 1px 20px !important;
-}
-
-.jp-title h2{
-	padding: 5px;
-	margin: 0;
-	font-size: 14px;
-	color: #4E4E4E;
-}
-
-
 
 .myheader{
 	position: fixed;
@@ -73,7 +61,6 @@ h1, h2, h3, h4, h5, h6{
 }
 
 .wraper{
-	background: url("image/bg2.jpg");
 	position: relative;
 	min-height: 100%;
 }
@@ -87,7 +74,7 @@ h1, h2, h3, h4, h5, h6{
 .container-same-item .btn_dowload{
 	position: absolute;
 	bottom: 10px;
-	right: 0px;
+	right: 0;
 }
 
 .btn_dowload{
@@ -143,7 +130,7 @@ h1, h2, h3, h4, h5, h6{
 	display: none;
 	position: absolute;
 	top: 51px;
-	left: 0px;
+	left: 0;
 	background: #000000ad;
 	width: 300px;
 	z-index: 1;
@@ -297,11 +284,9 @@ footer p{
 }
 
 .title{
-	margin-top: 30px;
+	margin: 30px 0 20px 3px;
 	background: #1c1f1f;
-	margin-bottom: 20px; 
-	padding: 21px 35px;
-	margin-left: 3px;
+	padding: 21px 25px;
 	border-radius: 4px 4px 0 0;
 }
 
@@ -311,9 +296,19 @@ footer p{
 	color: #fff; 
 }
 
-.title h3{
-	color: #fff;
-	float: left;
+.title h2{
+	color: #fff; 
+	margin-top: 4px;
+	text-transform: uppercase;
+	font-size: 25px;
+}
+
+.title h1{
+	color: #fff; 
+	margin-top: 4px;
+	text-transform: uppercase;
+	font-size: 25px;
+
 }
 
 .title-audio{
@@ -323,10 +318,6 @@ footer p{
 
 
 
-.mr-auto{
-	margin-left: 80px;
-}
-
 .icon-audio{
 	width: 18%;
 	float: left;
@@ -335,9 +326,6 @@ footer p{
 	padding-top: 8px;
 }
 
-.icon-audio img{
-	
-}
 
 .right-post{
 	width: 65%;
@@ -374,13 +362,21 @@ footer p{
 	background: #fff;
 	border-radius: 4px;
 	overflow: hidden;
+	box-shadow: 3px 3px 4px #999;
+}
+
+
+.container-item2{
+	width: 100%;
+	border: 1px solid #d4d4d4;
+	margin-bottom: 7px;
 }
 
 .button-show-hide{
 	color: #fff; 
 	font-size: 25px; 
 	position: absolute;
-	right: 0px; 
+	right: 0; 
 	top: 20px;
 	display: none;
 	cursor: pointer;
@@ -390,451 +386,459 @@ footer p{
 	border-right: 1px solid #d6d6d6;
 }
 
-/*.breadcrumb-post{
-	border-radius: 4px 4px 0 0;
-	border: 2px solid #d43c6dab;
-	color: #fff; 
-	height: 40px; 
-	margin-bottom: 20px;
+
+.breadcrumb-post ul li{
+	color: #676767;
+}
+
+.breadcrumb-post ul span{
+	color: #676767;
+	font-size: 10px;
+	margin-right: 6px;
+}
+
+.breadcrumb-post ul li a{
+	color: #676767;
+
+}
+
+.breadcrumb-post p{
+	line-height: 40px; 
+	margin-left: 10px;
+}
+
+.info-post{
+	border-bottom: 1px solid #d4d4d4; 
+	margin-bottom: 30px;
+	margin-top: 20px;
+	display: inline-block; 
+	width: 100%; 
+	position: relative;
+}
+
+.post-content{
+	margin-top: 25px;
+	color: #484848;
+}
+
+.post-content img{
+	display: block;
+	margin-bottom: 10px;
+}
+
+.post-content h2{
+	font-size: 18px;
+}
+
+
+.info-post h1{
+	font-size: 25px;
+}
+
+.pagination{
+	height: 43px;
+}
+
+.pagination a{
+	padding: 10px 15px;
+	border: 1px solid #bfbfbf;
+	font-size: 15px;
+	font-weight: bold;
+	border-radius: 3px;
+	color: #fff;
+	margin-right: 6px;
+}
+
+.pagination span{
+	background: #00000091;
+	padding: 10px 15px;
+	border: 1px solid #bdbdbd;
+	color: #fff;
+	font-weight: bold;
+	border-radius: 3px;
+	margin-right: 6px;
+}
+
+.main-pagination{
+	margin-top: 30px;
+}
+
+
+.aside-post{
+	margin-bottom: 30px;
+}
+
+.container-same-item{
+	float: left;
+	margin-bottom: 4px;
+	padding:0;
+}
+
+.box-same-item{
+	width: 99.4%;
+	border: 1px solid #e4e4e4;
+	display: inline-block;
+}
+
+.content-aside{
+	height: 75px;
+	width: 100%;
+	border: 1px solid #D9D9D9;
+	margin-bottom: 3px;
+}
+
+.view-size i{
+	font-size: 12px;
+}
+
+.title-aside h2{
+	line-height: 40px;
+	color: #565656;
+	font-size: 16px;
+	margin-left: 20px;
+	font-size: 23px;
+}
+
+.title-aside h3{
+	line-height: 40px;
+	color: #565656;
+	font-size: 16px;
+	margin-left: 20px;
+	font-size: 23px;
+}
+
+.title-same-post p{
+	line-height: 40px;
+	margin-left: 20px;
+	color: #565656;
+	font-size: 20px;
+}
+
+.order-aside{
+	height: 100%;
+	width:30%;
+	float: left;
+	border-right: 1px solid #D9D9D9;
+}
+
+
+.order-aside p{
+	line-height: 75px;
+	text-align: center;
+
+	font-size: 30px;
+}
+
+.info-aside-audio{
+	height: 100%;
+	padding: 7px;
+	width: 70%;
+	float: left;
+}
+
+.info-aside-audio p{
+	margin-bottom: 5px;
+}
+
+.info-aside-audio p a{
+	font-size: 15px;
+	color: #000;
+}
+
+.title-detail-audio{
+	text-align: left;
+}
+
+.info-aside-item{
+	font-size: 13px;
+}
+
+.table-bordered td{
+	color: #424242;
+	padding: 10px 20px;
+	border: 1px solid #D9D4D4;
+}
+
+.table-bordered th{
+	color: #000;
+	font-weight: bold;
+	padding: 10px;
+	font-weight: bold;
+	width: 150px;
+	border: 1px solid #D9D4D4;
+}
+
+
+.title-detail-audio p{
+	line-height: 40px;
+	margin-left: 20px;
+	color: #565656;
+	font-size: 20px;
+}
+
+
+
+.icon-title{
+	margin:0;
+}
+
+
+.all-title{
+	height: 40px;
+	width: 100%;
 	margin-top: 14px;
-	}*/
+	margin-bottom: 10px;
+}
 
-	.breadcrumb-post ul li{
-		color: #676767;
-	}
+.container-single{
+	background: #fff;  
+}
 
-	.breadcrumb-post ul span{
-		color: #676767;
-		font-size: 10px;
-		margin-right: 6px;
-	}
+.left-category{
+	float: left;
+	padding-right: 50px;
 
-	.breadcrumb-post ul li a{
-		color: #676767;
+}
 
-	}
-
-	.breadcrumb-post p{
-		line-height: 40px; 
-		margin-left: 10px;
-	}
-
-	.info-post{
-		border-bottom: 1px solid #d4d4d4; 
-		margin-bottom: 30px;
-		margin-top: 20px;
-		display: inline-block; 
-		width: 100%; 
-		position: relative;
-	}
-
-	.post-content{
-		margin-top: 25px;
-		color: #484848;
-	}
-
-	.post-content img{
-		display: block;
-		margin-bottom: 10px;
-	}
-
-	.post-content h2{
-		font-size: 18px;
-	}
+.right-category{
+	float: left;
+}
 
 
-	.info-post h1{
-		font-size: 25px;
-	}
+.left-single{
+	padding: 0 20px;
+	width: 70%;
+	float: left;
+}
 
-	.pagination{
-		height: 43px;
-	}
-
-	.pagination a{
-		padding: 10px 15px;
-		border: 1px solid #bfbfbf;
-		font-size: 15px;
-		font-weight: bold;
-		border-radius: 3px;
-		color: #fff;
-		margin-right: 6px;
-	}
-
-	.pagination span{
-		background: #00000091;
-		padding: 10px 15px;
-		border: 1px solid #bdbdbd;
-		color: #fff;
-		font-weight: bold;
-		border-radius: 3px;
-		margin-right: 6px;
-	}
-
-	.main-pagination{
-		margin-top: 30px;
-	}
+.right-single{
+	padding-right: 20px;
+	width: 30%;
+	float: left;
+}
 
 
-	.aside-post{
-		margin-bottom: 30px;
-	}
-
-	.container-same-item{
-		float: left;
-		margin-bottom: 4px;
-		padding:0;
-	}
-
-	.box-same-item{
-		width: 99.4%;
-		border: 1px solid #e4e4e4;
-		display: inline-block;
-	}
-
-	.content-aside{
-		height: 75px;
+@media only screen and (min-width: 0px) {
+	.container-item {
 		width: 100%;
-		border: 1px solid #D9D9D9;
-		margin-bottom: 3px;
 	}
-
-	.view-size i{
-		font-size: 12px;
-	}
-
-	.title-aside h3{
-		line-height: 40px;
-		color: #565656;
-		font-size: 16px;
-		margin-left: 20px;
-	}
-
-	.order-aside{
-		height: 100%;
-		width:30%;
-		float: left;
-		border-right: 1px solid #D9D9D9;
-	}
-
-
-	.order-aside p{
-		line-height: 75px;
-		text-align: center;
-
-		font-size: 30px;
-	}
-
-	.info-aside-audio{
-		height: 100%;
-		padding: 7px;
-		width: 70%;
-		float: left;
-	}
-
-	.info-aside-audio p{
-		margin-bottom: 5px;
-	}
-
-	.info-aside-audio p a{
-		font-size: 15px;
-		color: #000;
-	}
-
-	.title-detail-audio{
-		text-align: left;
-	}
-
-	.info-aside-item{
-		font-size: 13px;
-	}
-
-	.table-bordered td{
-		color: #424242;
-		padding: 10px 20px;
-		border: 1px solid #D9D4D4;
-	}
-
-	.table-bordered th{
-		color: #000;
-		font-weight: bold;
-		padding: 10px;
-		font-weight: bold;
-		width: 150px;
-		border: 1px solid #D9D4D4;
-	}
-
-
-	.title-detail-audio p{
-		line-height: 40px;
-		margin-left: 20px;
-		color: #565656;
-		font-size: 20px;
-	}
-
-
-
-	.icon-title{
-		margin:0;
-	}
-
-
-	.all-title{
-		height: 40px;
+	.container-item-category{
 		width: 100%;
-		margin-top: 14px;
-		margin-bottom: 10px;
-	}
-
-	.container-single{
-		background: #fff;  
 	}
 
 	.left-category{
-		float: left;
-		padding-right: 50px;
-
+		width: 100%;
+		padding-right: 0;
 	}
 
 	.right-category{
-		float: left;
-	}
+		width: 100%;
 
+	}
+	
+}
+
+
+
+@media only screen and (max-width: 1000px) {
 
 	.left-single{
 		padding: 0 20px;
-		width: 70%;
+		width: 100%;
 		float: left;
 	}
 
 	.right-single{
-		padding-right: 20px;
-		width: 30%;
+		width: 100%;
 		float: left;
+		padding-left: 20px;
+	}
+	
+}
+
+
+
+
+@media only screen and (max-width: 800px) {
+	.post_qrcode{
+		width: 100%;
+		display: none;
+	}
+
+	.title{
+		width: 100%;
+		padding-right: 2px;
+		padding-left: 20px;
+	}
+
+	.left-info-post{
+		width: 100%
+	}
+
+	
+	.logo{
+		text-align: left !important;
+		width: 100%;
+
+	}
+
+	.button-show-hide{
+		display: block;
+	}
+
+	.sub-menu{
+		background: none;
 	}
 
 
-	@media only screen and (min-width: 0px) {
-		.container-item {
-			width: 100%;
-		}
-		.container-item-category{
-			width: 100%;
-		}
+	.category{
+		display: none;
+		margin-top: 20px;
+		width: 100%;
+	}
 
-		.left-category{
-			width: 100%;
-			padding-right: 0;
-		}
+	.category ul{
+		text-align: left;
+		width: 100%;
+	}
 
-		.right-category{
-			width: 100%;
+	.category ul li{
+		padding: 10px;
+		width: 100%;
+	}
 
-		}
+
+
+	.sub-menu{
+		width: 100%;
+		position: static;
+	}
+
+	.sub-menu li{
+
+		width: 100%;
+	}
+
+
+	
+	.left-category{
+		padding-right: 0;
+	}
+
+}
+
+
+
+@media only screen and (max-width: 1100px) {
+	.logo{
+		width: 100%;
+		text-align: center;
+	}
+
+	.category{
+		padding-left: 0;
+		width: 100%;
+		text-align: center;
+	}
+
+
+
+}
+
+
+
+@media only screen and (min-width: 992px) {
+	.container-item {
+		width: 50%;
+	}
+
+
+	.container {
+		width: 930px;
+	}
+
+	.left-category{
+		width: 65%;
+		padding-right: 50px;
+	}
+
+	.right-category{
+		width: 35%;
+	}
+
+
+}
+
+@media only screen and (min-width: 1100px) {
+	.container {
+		width: 1050px;
+	}
+
+	.container-item-category{
+		width: 50%;
+	}
+
+
+	.left-category{
+		width: 70%;
+	}
+
+	.right-category{
+		width: 30%;
+	}
+}
+
+
+@media only screen and (min-width: 1200px) {
+	.container-item {
+		width: 33.33333%;
+	}
+
+	.container-item-category{
+		width: 33.333333%;
+	}
+
+	.left-category{
+		width: 75%;
+	}
+
+	.right-category{
+		width: 25%;
+	}
+}
+
+
+@media only screen and (min-width: 1366px) {
+	.container-item {
+		width: 25%;
+	}
+
+	
+
+	.container {
+		width: 1200px;
+	}
+
+	
+
+
+
+	@media only screen and (min-width: 1600px) {
 		
-	}
-
-
-
-	@media only screen and (max-width: 1000px) {
-
-		.left-single{
-			padding: 0 20px;
-			width: 100%;
-			float: left;
-		}
-
-		.right-single{
-			width: 100%;
-			float: left;
-			padding-left: 20px;
-		}
-		
-	}
-
-
-
-
-	@media only screen and (max-width: 800px) {
-		.post_qrcode{
-			width: 100%;
-			display: none;
-		}
-
-		.title{
-			width: 100%;
-			padding-right: 2px;
-			padding-left: 20px;
-		}
-
-		.left-info-post{
-			width: 100%
-		}
-
-		
-		.logo{
-			text-align: left !important;
-			width: 100%;
-
-		}
-
-		.button-show-hide{
-			display: block;
-		}
-
-		.sub-menu{
-			background: none;
-		}
-
-
-		.category{
-			display: none;
-			margin-top: 20px;
-			width: 100%;
-		}
-
-		.category ul{
-			text-align: left;
-			width: 100%;
-		}
-
-		.category ul li{
-			padding: 10px;
-			width: 100%;
-		}
-
-
-
-		.sub-menu{
-			width: 100%;
-			position: static;
-		}
-
-		.sub-menu li{
-
-			width: 100%;
-		}
-
-
-		
-		.left-category{
-			padding-right: 0;
-		}
-
-	}
-
-
-
-	@media only screen and (max-width: 1100px) {
-		.logo{
-			width: 100%;
-			text-align: center;
-		}
-
-		.category{
-			padding-left: 0;
-			width: 100%;
-			text-align: center;
-		}
-
-
-
-	}
-
-
-
-	@media only screen and (min-width: 992px) {
-		.container-item {
-			width: 50%;
-		}
-
-
-		.container {
-			width: 930px;
-		}
-
-		.left-category{
-			width: 65%;
-			padding-right: 50px;
-		}
-
-		.right-category{
-			width: 35%;
-		}
-
-
-	}
-
-	@media only screen and (min-width: 1100px) {
-		.container {
-			width: 1050px;
-		}
-
-		.container-item-category{
-			width: 50%;
-		}
-
-
-		.left-category{
-			width: 70%;
-		}
-
-		.right-category{
-			width: 30%;
-		}
-	}
-
-
-	@media only screen and (min-width: 1200px) {
-		.container-item {
-			width: 33.33333%;
-		}
 
 		.container-item-category{
 			width: 33.333333%;
 		}
 
 		.left-category{
-			width: 75%;
+			width: 80%;
 		}
 
 		.right-category{
-			width: 25%;
+			width: 20%;
 		}
 	}
 
-
-	@media only screen and (min-width: 1366px) {
-		.container-item {
-			width: 25%;
-		}
-
-		
-
-		.container {
-			width: 1200px;
-		}
-
-		
-
-
-
-		@media only screen and (min-width: 1600px) {
-			
-
-			.container-item-category{
-				width: 33.333333%;
-			}
-
-			.left-category{
-				width: 80%;
-			}
-
-			.right-category{
-				width: 20%;
-			}
-		}
-
-		
+	
 
 
