--- a/style.css
+++ b/style.css
@@ -71,8 +71,8 @@ h1, h2, h3, h4, h5, h6{
 }
 
 #sec-ringtones{
-	margin-top: 80px;
-	padding-bottom: 100px;
+	margin-top: -50px;
+	padding-bottom: 70px;
 }
 
 
@@ -114,13 +114,12 @@ h1, h2, h3, h4, h5, h6{
 	width:97%; 
 	margin: 0 auto; 
 	margin-top: 40px;
-	padding-bottom: 50px;
 }
 
 
 .mynav{
 	padding: 5px;
-	background: #000000c9;
+	background: #000000d1;
 }
 
 .mynav a{
@@ -189,17 +188,21 @@ h1, h2, h3, h4, h5, h6{
 	margin:0;
 }
 
+
+.post-categories li{
+	float: left;
+	margin-right: 10px;
+}
+
 #tags a{
 	color:#1795BF;
 }
 footer {
 	text-align: center;
-	position:absolute;
-	bottom:0;
 	width:100%;
-	height:70px;
+	height:50px;
 	color: #fff;
-	background: #000000ad;  /* Height of the footer */
+	background: #000000d1;  /* Height of the footer */
 }
 
 footer p a{
@@ -230,7 +233,7 @@ footer p a:hover{
 }
 
 footer p{
-	line-height: 70px;
+	line-height: 50px;
 }
 
 
@@ -296,13 +299,13 @@ footer p{
 .title{
 	margin: 30px 0 20px 3px;
 	background: #1c1f1f;
-	padding: 21px 25px;
+	padding: 13px 22px;
 	border-radius: 4px 4px 0 0;
 }
 
 .title i{
 	float: left;
-	font-size: 31px;
+	font-size: 24px;
 	color: #fff; 
 }
 
@@ -310,14 +313,14 @@ footer p{
 	color: #fff; 
 	margin-top: 4px;
 	text-transform: uppercase;
-	font-size: 25px;
+	font-size: 20px;
 }
 
 .title h1{
 	color: #fff; 
 	margin-top: 4px;
 	text-transform: uppercase;
-	font-size: 25px;
+	font-size: 20px;
 
 }
 
@@ -350,6 +353,25 @@ footer p{
 	float: left;
 }
 
+.genre{
+	    overflow: hidden;
+
+	margin-top: 30px;
+	background: #fff;
+	padding: 00px 40px;
+}
+
+.item-genre{
+	padding: 10px 0px;
+	text-align: center;
+	float: left;
+}
+
+.genre a{
+	color: #363636;
+	font-weight: bold;
+}
+
 
 .info-audio a{
 	margin-top: 7px;
@@ -380,6 +402,7 @@ footer p{
 	width: 100%;
 	border: 1px solid #d4d4d4;
 	margin-bottom: 7px;
+	height: 79px;
 }
 
 .button-show-hide{
@@ -594,10 +617,12 @@ footer p{
 }
 
 .container-search{
-		margin-top: 100px;
+		margin: 100px 0;
 	}
 
-
+#sec-home{
+	    margin-top: -50px;
+}
 
 .icon-title{
 	margin:0;
@@ -639,6 +664,8 @@ footer p{
 }
 
 
+
+
 @media only screen and (min-width: 0px) {
 	.container-item {
 		width: 100%;
@@ -655,6 +682,10 @@ footer p{
 	.right-category{
 		width: 100%;
 
+	}
+
+	.item-genre{
+		width: 50%;
 	}
 
 }
@@ -787,6 +818,10 @@ footer p{
 		width: 50%;
 	}
 
+	.item-genre{
+		width: 25%;
+	}
+
 
 	.container {
 		width: 930px;
@@ -839,6 +874,10 @@ footer p{
 
 	.right-category{
 		width: 25%;
+	}
+
+	.item-genre{
+		width: 20%;
 	}
 }
 
